--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.6.0",
     "pg": "^8.8.0"
   }
 }
