--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
