--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0"
